tdf#155212 clear the cached system font list after loading a font

If the system font is not cached in SalData, loading embedded
fonts will be extremely slow and will trigger each frame and each
of its internal subframes to reload the system font list when
loading documents with embedded fonts.

So instead, reenable caching of the system font list in SalData
by reverting commit 3b6e9582ce43242a2304047561116bb26808408b.
Then, to prevent tdf#72456 from reoccurring, clear the cached
system font list after a font has been loaded or unloaded.
This should cause the first frame's request to reload the cached
system font list and all subsequent frames will avoid doing
duplicate font reloads.

Change-Id: If2a36f8c17d8e25f818275f30a19af8517478884
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168734
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 195ed184dd1552816bdebfe9c54fb6408bf91cc1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168728
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>